find_package(Threads REQUIRED)

file(GLOB subdirs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/ ${CMAKE_CURRENT_SOURCE_DIR}/*)
foreach(subdir ${subdirs})
    if (NOT IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${subdir})
        continue()
    endif()
    if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/CMakeLists.txt)
        add_subdirectory(${subdir})
    else()
        file(GLOB srcs ${subdir}/*.cc)
        add_executable(${subdir} ${srcs})
    endif()
    target_compile_options(${subdir} PRIVATE -Wall -Wextra -Wpedantic -Wfloat-equal)
    target_compile_options(${subdir} PRIVATE $<$<CONFIG:Debug>:-Os -g3 -fsanitize=undefined,address,leak>)
    target_link_options(${subdir} PRIVATE $<$<CONFIG:Debug>:-fsanitize=undefined,address,leak>)
    target_link_libraries(${subdir} PRIVATE ${CMAKE_THREAD_LIBS_INIT})
endforeach(subdir ${subdirs})